--- a/fadi.html
+++ b/fadi.html
@@ -8,7 +8,7 @@
         <img src="C:\Users\admin\Desktop\NaGHaZaKi\Photo\netflix.png" width="300px" height="200px">
         <h1 style="font-family:comic sans ms ; color: blue;">See what's next</h1>
         <h3>Watch anywhere, but mostly from home.</h3>
-        <a href="https://naghazaki.github.io/testhtml1/fadi1.html">Try 30 Days Free</a>
+        <a href="fadi1.html">Try 30 Days Free</a>
         <p>Watch TV shows and movies anytime,anywhere.</p>
     </body>
 </html>
