--- a/fadi1.html
+++ b/fadi1.html
@@ -12,6 +12,6 @@
             width="500px" height="200px">
             <p>Our developers are working hard on<br>
                 our new website, so stay tuned!</p>
-               <p class="back"> <a href="fadi.html">HOME</a></p>
+               <p class="back"> <a href="fadi.html1">HOME</a></p>
     </body>
 </html>
