--- a/fadi.html
+++ b/fadi.html
@@ -5,7 +5,7 @@
         <link href="fadi.css" rel="stylesheet">
     </head>
     <body>
-        <img src="C:\Users\admin\Desktop\NaGHaZaKi\Photo\netflix.png" width="300px" height="200px">
+        <img src="netflix.png" width="300px" height="200px">
         <h1 style="font-family:comic sans ms ; color: blue;">See what's next</h1>
         <h3>Watch anywhere, but mostly from home.</h3>
         <a href="fadi1.html">Try 30 Days Free</a>
